Se arreglo un bug con la deteccion de ip de la esp32

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /build/
 /dist/
 
+# Dependencias gestionadas por idf (no versionar)
+/managed_components/
+
 # Archivo de configuración local. Es mejor versionar sdkconfig.defaults en su lugar.
 /sdkconfig
 /sdkconfig.old
